--- a/Source/Samples/Sample.GoogleMap/Pages/Index.razor.css
+++ b/Source/Samples/Sample.GoogleMap/Pages/Index.razor.css
@@ -1,11 +1,33 @@
 ﻿#map-container {
-    height: 450px;
+    display: inline-block;
     width: 800px;
+    height: 450px;
+    background-color: aqua;
+}
+
+#map-container-log {
+    vertical-align: top;
+    padding-left: 10px;
+    display: inline-block;
+    overflow-y: scroll;
+    width: 600px;
+    height: 450px;
     background-color: aqua;
 }
 
 #map-container-2 {
-    height: 550px;
+    display: inline-block;
     width: 900px;
+    height: 550px;
+    background-color: blueviolet;
+}
+
+#map-container-log2 {
+    vertical-align: top;
+    padding-left: 10px;
+    display: inline-block;
+    overflow-y: scroll;
+    width: 500px;
+    height: 550px;
     background-color: blueviolet;
 }
