--- a/Source/Samples/Sample.Maps/Pages/Index.razor.css
+++ b/Source/Samples/Sample.Maps/Pages/Index.razor.css
@@ -2,7 +2,7 @@
     display: inline-block;
     width: 800px;
     height: 450px;
-    background-color: aqua;
+    /*background-color: aqua;*/
 }
 
 #map-container-log {
