--- a/Source/Samples/Sample.Maps/_Imports.razor
+++ b/Source/Samples/Sample.Maps/_Imports.razor
@@ -6,5 +6,6 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using Sample.GoogleMap
-@using Sample.GoogleMap.Shared
+
+@using Sample.Maps
+@using Sample.Maps.Shared
