--- a/Source/Samples/Sample.Maps/Pages/Index.razor.css
+++ b/Source/Samples/Sample.Maps/Pages/Index.razor.css
@@ -2,7 +2,6 @@
     display: inline-block;
     width: 800px;
     height: 450px;
-    /*background-color: aqua;*/
 }
 
 #map-container-log {
@@ -12,22 +11,7 @@
     overflow-y: scroll;
     width: 600px;
     height: 450px;
-    background-color: aqua;
-}
-
-#map-container-2 {
-    display: inline-block;
-    width: 900px;
-    height: 550px;
-    background-color: blueviolet;
-}
-
-#map-container-log2 {
-    vertical-align: top;
-    padding-left: 10px;
-    display: inline-block;
-    overflow-y: scroll;
-    width: 500px;
-    height: 550px;
-    background-color: blueviolet;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 2px;
 }
