--- a/Source/Samples/Sample.Maps/wwwroot/css/app.css
+++ b/Source/Samples/Sample.Maps/wwwroot/css/app.css
@@ -2,32 +2,6 @@
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-a, .btn-link {
-    color: #0366d6;
-}
-
-.btn-primary {
-    color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
-}
-
-.content {
-    padding-top: 1.1rem;
-}
-
-.valid.modified:not([type=checkbox]) {
-    outline: 1px solid #26b050;
-}
-
-.invalid {
-    outline: 1px solid red;
-}
-
-.validation-message {
-    color: red;
-}
-
 #blazor-error-ui {
     background: lightyellow;
     bottom: 0;
@@ -46,3 +20,21 @@ a, .btn-link {
         right: 0.75rem;
         top: 0.5rem;
     }
+
+.map-container {
+    display: inline-block;
+    width: 800px;
+    height: 450px;
+}
+
+.map-event-log {
+    vertical-align: top;
+    padding-left: 10px;
+    display: inline-block;
+    overflow-y: scroll;
+    width: 600px;
+    height: 450px;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 2px;
+}
