--- a/Source/Samples/Sample.Maps/Shared/MainLayout.razor
+++ b/Source/Samples/Sample.Maps/Shared/MainLayout.razor
@@ -6,6 +6,7 @@
     <a href="/">Single Map</a>
     <a href="/TwoMaps">2 Maps</a>
     <a href="/MapMethods">Map methods</a>
+    <a href="/Marker">Marker</a>
 </div>
 
 <h1>
