--- a/Source/Samples/Sample.Maps/Shared/MainLayout.razor
+++ b/Source/Samples/Sample.Maps/Shared/MainLayout.razor
@@ -7,6 +7,7 @@
     <a href="/TwoMaps">2 Maps</a>
     <a href="/MapMethods">Map methods</a>
     <a href="/Marker">Marker</a>
+    <a href="/Geocoding">Geocoding</a>
 </div>
 
 <h1>
