--- a/Source/Samples/Sample.Maps/Pages/Geocoding.razor
+++ b/Source/Samples/Sample.Maps/Pages/Geocoding.razor
@@ -1,8 +1,13 @@
 ﻿@page "/Geocoding"
 
+@using System
+@using System.Reactive.Threading.Tasks
+@using System.Reactive.Linq
 @using Proxoft.Extensions.Options
+@using Proxoft.Maps.Core.Api;
 @using Proxoft.Maps.Core.Geocoding
- 
+
+
 <h3>Geocoding</h3>
 
 <div>
@@ -28,9 +33,18 @@
 
 </div>
 
+<div class="map-container" @ref="MapHost"></div>
+
 @code {
     [Inject]
-    Proxoft.Maps.Core.Geocoding.IGeocoder Geocoder { get; set; }
+    IGeocoder Geocoder { get; set; }
+
+    [Inject]
+    IMapFactory MapFactory { get; set; }
+
+    private ElementReference MapHost { get; set; }
+
+    private IMap _map = Proxoft.Maps.Core.Api.Maps.NoMap.Instance;
 
     private string Search { get; set; } = "Banska Bystrica";
 
@@ -39,6 +53,35 @@
     private Address Address => (Right<ErrorStatus, Address>)this.Result;
 
     private bool ShowError { get; set; }
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        await base.OnAfterRenderAsync(firstRender);
+        if (firstRender)
+        {
+            _map = await this.MapFactory.Initialize(new MapOptions {
+                Center = new LatLng
+                {
+                    Latitude = 48.569m,
+                    Longitude = 18.569m
+                },
+                Zoom = 9
+            }, this.MapHost);
+
+            _map.OnClick()
+                .Select(latLng =>
+                {
+                    Console.WriteLine($"latlng {latLng}");
+                    return this.Geocoder.Geocode(latLng.Latitude, latLng.Longitude).ToObservable();
+                })
+                .Concat()
+                .Subscribe(result =>
+                {
+                    this.Result = result;
+                    this.StateHasChanged();
+                });
+        }
+    }
 
     private async Task OnSearchClick()
     {
