--- a/Source/Samples/Sample.Maps/Pages/Geocoding.razor
+++ b/Source/Samples/Sample.Maps/Pages/Geocoding.razor
@@ -44,7 +44,7 @@
 
     private ElementReference MapHost { get; set; }
 
-    private IMap _map = Proxoft.Maps.Core.Api.Maps.NoMap.Instance;
+    private IMap _map = Proxoft.Maps.Core.Api.NoMap.Instance;
 
     private string Search { get; set; } = "Banska Bystrica";
 
