MapBox static image

--- a/Source/Samples/Sample.Maps/Shared/MainLayout.razor
+++ b/Source/Samples/Sample.Maps/Shared/MainLayout.razor
@@ -8,6 +8,7 @@
     <a href="/MapMethods">Map methods</a>
     <a href="/Marker">Marker</a>
     <a href="/Geocoding">Geocoding</a>
+    <a href="/StaticMap">Static Map</a>
 </div>
 
 <h1>
