--- a/Source/Samples/Samples/_Imports.razor
+++ b/Source/Samples/Samples/_Imports.razor
@@ -7,8 +7,8 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 
-@using Sample.Maps
-@using Sample.Maps.Shared
+@using Proxoft.Maps.Samples
+@using Proxoft.Maps.Samples.Shared
 
 @using Proxoft.Maps.Core
 @using Proxoft.Maps.Core.Api
