--- a/Source/Samples/Samples/Pages/StaticMap.razor
+++ b/Source/Samples/Samples/Pages/StaticMap.razor
@@ -1,5 +1,6 @@
 ﻿@page "/StaticMap"
 @using Proxoft.Extensions.Options
+@using Proxoft.Maps.Core.Abstractions.Common;
 @using Proxoft.Maps.Core.Abstractions.StaticMaps
 
 <h3>StaticMap</h3>
