--- a/Source/Samples/Samples/Shared/MainLayout.razor
+++ b/Source/Samples/Samples/Shared/MainLayout.razor
@@ -7,6 +7,7 @@
     <a href="/TwoMaps">2 Maps</a>
     <a href="/MapMethods">Map methods</a>
     <a href="/Marker">Marker</a>
+    <a href="/Polygon">Polygon</a>
     <a href="/Geocoding">Geocoding</a>
     <a href="/StaticMap">Static Map</a>
 </div>
