Set Style of a polygon

--- a/Source/Samples/Samples/Pages/Polygon.razor
+++ b/Source/Samples/Samples/Pages/Polygon.razor
@@ -1,17 +1,33 @@
 ﻿@page "/Polygon"
 @using Proxoft.Maps.Core.Api.Shapes;
+@using System.Reactive.Linq;
+@using System.Text.Json.Serialization;
+@using System.Text.Json;
 
-<div class="map-container" @ref="MapHost">
+<div>
+    <div class="map-container" @ref="MapHost">
+    </div>
 </div>
 
-<button @onclick="ClearLogClick">Clear log</button>
-<div class="map-event-log">
-    @foreach (var l in MapLog.Reverse<string>())
-    {
-        <span>@l</span>
+<div>
+    <button @onclick=@(() => this.RemovePolygon(_polygon))>Remove polygon 1</button>
+    <button @onclick=@(() => this.RemovePolygon(_polygon2))>Remove polygon 2</button>
+    <button @onclick=@(() => this.ChangeColor())>Change color of polygon 2</button>
+</div>
 
-        <br />
-    }
+<br/>
+
+<div>
+    <button @onclick="ClearLogClick">Clear log</button>
+    <br/>
+    <div class="map-event-log">
+        @foreach (var l in MapLog.Reverse<string>())
+        {
+            <span>@l</span>
+
+            <br />
+        }
+    </div>
 </div>
 
 @code {
@@ -25,6 +41,8 @@
     private List<string> MapLog { get; set; } = new();
 
     private ElementReference MapHost { get; set; }
+
+    private string PolygonInfo { get; set; } = "";
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
@@ -50,7 +68,7 @@
                         new LatLng { Latitude = 51.51m,  Longitude = -0.09m },
                         new LatLng { Latitude = 51.51m,  Longitude = -0.05m },
                         new LatLng { Latitude = 51.45m,  Longitude = -0.047m },
-                },
+    },
                     Holes = new LatLng[][]
                     {
                         new[]
@@ -67,6 +85,10 @@
             _polygon = _map.AddPolygon(options);
             _polygon.OnEvent
                 .Subscribe(e => this.AddLog($"{_polygon.Id} {e.Name}"));
+
+            _polygon.OnEvent
+               .OfType<MouseClickEvent>()
+               .Subscribe(_ => this.OnPolygonClick(_polygon));
 
             PolygonOptions options2 = new()
             {
@@ -90,6 +112,10 @@
             _polygon2 = _map.AddPolygon(options2);
             _polygon2.OnEvent
                 .Subscribe(e => this.AddLog($"{_polygon2.Id} {e.Name}"));
+
+            _polygon2.OnEvent
+                .OfType<MouseClickEvent>()
+                .Subscribe(_ => this.OnPolygonClick(_polygon2));
         }
     }
 
@@ -99,8 +125,43 @@
         this.StateHasChanged();
     }
 
+    private void RemovePolygon(IPolygon polygon)
+    {
+        if (polygon.IsRemoved)
+        {
+            return;
+        }
+
+        polygon.Remove();
+    }
+
+    private void ChangeColor()
+    {
+        Style style = new()
+        {
+            FillColor = "red"
+        };
+
+        _polygon.SetStyle(style);
+        _polygon2.SetStyle(style);
+    }
+
     private void ClearLogClick()
     {
         this.MapLog.Clear();
+    }
+
+    private void OnPolygonClick(IPolygon polygon)
+    {
+        Console.WriteLine($"getting info about {polygon.Id}");
+
+        LatLngBounds bounds = polygon.GetBounds();
+        PolygonLatLng latlngs = polygon.GetLatLngs();
+
+        Console.WriteLine(bounds);
+
+        string json = JsonSerializer.Serialize(latlngs);
+        Console.WriteLine(json);
+        Console.WriteLine($"==================== {polygon.Id} ====");
     }
 }
